vix/tests/checker-corpus/reject/missing-struct-field.vix
struct Config {
    name: String,
    path: Path,
}

fn main() -> Config {
    Config { name: "a" }
}
